# ynab-belfius

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: csv.rs  index.ts  input.rs  main.rs
