[package]
name = "ynab-belfius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18" }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }

[profile.release]
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
